--- a/ExamKeeper/appsettings.json
+++ b/ExamKeeper/appsettings.json
@@ -11,5 +11,5 @@
   "Domain": "localhost",
   "AllowVersion": "N",
   "version": "20220301",
-  "IsIgnoreIndexCreating": false
+  "IsIgnoreIndexCreating": true
 }
